fixes and optimizations for SW6.1.*

--- a/src/Resources/app/administration/src/module/blog-module/page/sas-blog-create/sas-blog-create.html.twig
+++ b/src/Resources/app/administration/src/module/blog-module/page/sas-blog-create/sas-blog-create.html.twig
@@ -30,7 +30,12 @@
                         disabled
                         :label="$tc('sas-blog.detail.slugLable')">
                     </sw-text-field>
-                    <sw-textarea-field id="content" v-model="blog.content" type="textarea" :label="$tc('sas-blog.detail.contentLable')" placeholder="placeholder goes here..."></sw-textarea-field>
+                    <sw-text-editor
+                        :label="$tc('sas-blog.detail.contentLable')"
+                        :placeholder="placeholder(blog, 'description', $tc('sas-blog.detail.contentPlaceholder'))"
+                        name="content"
+                        v-model="blog.content">
+                    </sw-text-editor>
                 </sw-card>
             </sw-card-view>
         </template>
