--- a/src/Resources/views/page/blog/index.html.twig
+++ b/src/Resources/views/page/blog/index.html.twig
@@ -1,4 +1,4 @@
-{% sw_extends '@Storefront/base.html.twig' %}
+{% sw_extends '@Storefront/storefront/base.html.twig' %}
 
 {% block base_content %}
     {% block page_blog %}
